--- a/peeling-powder.html
+++ b/peeling-powder.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Algae Peeling Powder | Professional Algae Peel | DERMOCÉAN</title>
+    <title>Algae Peeling Powder | DERMOCÉAN</title>
     <meta name="description"
         content="100% Natural Algae Peeling Powder for beauty professionals. Deep exfoliation with marine algae microcrystals. Treating acne, pigmentation and wrinkles.">
     <meta name="keywords"
@@ -50,185 +50,93 @@
     }
     </script>
 
+    <!-- Fonts & Icons -->
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&family=Almarai:wght@700&family=Tajawal:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/product.css">
 </head>
 
 <body>
+    <!-- Header Component -->
+    <div id="header-component"></div>
 
-    <!-- Top Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <div class="contact-info">
-                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
-                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
-            </div>
-            <div class="lang-selector">
-                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span>🇺🇸</span> EN</a>
-                <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
-                <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
-                <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Header -->
-    <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN">
-            </a>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html" data-i18n="home">Home</a></li>
-                <li><a href="about.html" data-i18n="aboutUs">About Use</a></li>
-                <li><a href="index.html#products" class="active" data-i18n="products">Products</a></li>
-                <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
-                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
-                <li><a href="videos.html" data-i18n="videos">Videos</a></li>
-                <li><a href="register.html" class="btn btn-outline" data-i18n="register">B2B Register</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Mobile Sidebar -->
-    <div class="mobile-overlay"></div>
-    <div class="mobile-menu-sidebar">
-        <div class="mobile-menu-header">
-            <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN" class="mobile-logo">
-            <button class="close-menu"><i class="fas fa-times"></i></button>
-        </div>
-        <ul class="mobile-menu-items">
-            <li><a href="index.html" data-i18n="home">Home</a></li>
-            <li><a href="about.html" data-i18n="aboutUs">About Us</a></li>
-            <li><a href="index.html#products" data-i18n="products">Products</a></li>
-            <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
-            <li><a href="articles.html" data-i18n="articles">Articles</a></li>
-            <li><a href="videos.html" data-i18n="videos">Videos</a></li>
-            <li><a href="register.html" data-i18n="register">B2B Register</a></li>
-        </ul>
-        <div class="mobile-lang-selector">
-            <a href="#" onclick="changeLanguage('en')" data-lang="en"><span>🇺🇸</span> EN</a>
-            <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
-            <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
-            <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
-        </div>
-    </div>
-
-    <!-- Product Detail Section -->
-    <section class="product-detail-hero">
+    <!-- Product Hero -->
+    <section class="product-hero">
         <div class="container">
             <div class="product-hero-grid">
-                <div class="product-gallery">
-                    <img src="images/products/peeling-powder.png" alt="Algae Peeling Powder" class="main-product-img">
+                <div class="product-image-wrapper">
+                    <img src="images/products/peeling-powder.png" alt="Algae Peeling Powder" class="product-main-image">
                 </div>
-                <div class="product-info-col">
-                    <span class="product-category">Peeling</span>
+                <div class="product-info-wrapper">
+                    <span class="product-category" data-i18n="cat_peeling">Peeling</span>
                     <h1 class="product-title" data-i18n="prod_peeling_name">Algae Peeling Powder</h1>
-                    <p class="product-desc" data-i18n="prod_peeling_desc">100% Natural Formula containing microcrystals
-                        of marine algae for deep exfoliation.</p>
+                    <p class="product-description" data-i18n="prod_peeling_desc">
+                        100% Natural Formula containing microcrystals of marine algae for deep exfoliation.
+                    </p>
 
-                    <div class="product-highlights">
-                        <div class="highlight-item">
+                    <div class="product-features">
+                        <div class="feature-item">
                             <i class="fas fa-leaf"></i>
-                            <span data-i18n="100Natural">100% Natural</span>
+                            <span data-i18n="natural100">100% Natural</span>
                         </div>
-                        <div class="highlight-item">
+                        <div class="feature-item">
                             <i class="fas fa-gem"></i>
-                            <span data-i18n="ProfessionalUsers">Professional Use</span>
+                            <span data-i18n="professionalUse">Professional Use</span>
                         </div>
                     </div>
 
-                    <a href="register.html" class="btn btn-primary" data-i18n="orderNow">Order Now</a>
+                    <button class="btn btn-primary order-btn disabled" disabled data-i18n="orderNow">Order Now</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Ingredients & Benefits -->
-    <section class="product-detail-content">
+    <!-- Product Details -->
+    <section class="product-details">
         <div class="container">
             <div class="details-grid">
-                <div class="detail-block">
-                    <h3 data-i18n="keyIngredients">Key Ingredients</h3>
+                <div class="detail-card">
+                    <h3><i class="fas fa-leaf"></i> <span data-i18n="keyIngredients">Key Ingredients</span></h3>
                     <ul class="ingredient-list">
-                        <li>
-                            <strong>Algae Extract</strong>: <span data-i18n="ing_algae">Deep hydration</span>
-                        </li>
-                        <li>
-                            <strong>Calendula</strong>: <span data-i18n="ing_calendula">Soothes irritation</span>
-                        </li>
-                        <li>
-                            <strong>Melissa</strong>: <span data-i18n="ing_melissa">Boosts collagen</span>
-                        </li>
-                        <li>
-                            <strong>Chamomile</strong>: <span data-i18n="ing_chamomile">Reduces redness</span>
-                        </li>
+                        <li><strong>Algae Extract:</strong> <span data-i18n="ing_algae">Deep hydration</span></li>
+                        <li><strong>Calendula:</strong> <span data-i18n="ing_calendula">Soothes irritation</span></li>
+                        <li><strong>Melissa:</strong> <span data-i18n="ing_melissa">Boosts collagen</span></li>
+                        <li><strong>Chamomile:</strong> <span data-i18n="ing_chamomile">Reduces redness</span></li>
                     </ul>
                 </div>
-                <div class="detail-block">
-                    <h3 data-i18n="benefits">Benefits</h3>
+                <div class="detail-card">
+                    <h3><i class="fas fa-check-circle"></i> <span data-i18n="benefits">Benefits</span></h3>
                     <ul class="benefits-list">
                         <li data-i18n="benefit_exfoliate">Exfoliates dead skin</li>
                         <li data-i18n="benefit_pores">Cleanses pores</li>
-                        <li data-i18n="benefit_pigment">Fades pigmentation</li>
+                        <li data-i18n="benefit_pigmentation">Fades pigmentation</li>
                         <li data-i18n="benefit_acne">Treats acne</li>
                     </ul>
                 </div>
             </div>
-
-            <!-- Usage -->
-            <div class="usage-block">
-                <h3 data-i18n="howToUse">How to Use</h3>
-                <p data-i18n="usage_peeling">Mix 2g with Support Solution. Massage for 4-8 mins based on protocol.</p>
-                <a href="how-to-use.html" class="link-arrow" data-i18n="viewFullProtocol">View Full Protocol <i
-                        class="fas fa-arrow-right"></i></a>
-            </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
+    <!-- Usage Section -->
+    <section class="usage-section">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-col">
-                    <h4 data-i18n="aboutDermocean">About Dermocean</h4>
-                    <p style="color: #aaa; font-size: 0.9rem;" data-i18n="aboutText">
-                        Leading B2B skincare provider for beauty centers.
-                        Combining nature's finest ingredients with scientific innovation.
-                    </p>
-                </div>
-                <div class="footer-col">
-                    <h4 data-i18n="quickLinks">Quick Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="index.html" data-i18n="home">Home</a></li>
-                        <li><a href="index.html#products" data-i18n="products">Products</a></li>
-                        <li><a href="register.html" data-i18n="registerCenter">Register Center</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4 data-i18n="contactUs">Contact Us</h4>
-                    <ul class="footer-links">
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
-                        </li>
-                        <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
-                        <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 DERMOCÉAN. All Rights Reserved.</p>
-            </div>
+            <h3 data-i18n="howToUse">How to Use</h3>
+            <p data-i18n="usage_peeling">Mix 2g with Support Solution. Massage for 4-8 mins based on protocol.</p>
+            <a href="how-to-use.html" class="btn" data-i18n="viewFullProtocol">View Full Protocol <i
+                    class="fas fa-arrow-right"></i></a>
         </div>
-    </footer>
+    </section>
 
+    <!-- Footer Component -->
+    <div id="footer-component"></div>
+
+    <!-- Scripts -->
     <script src="js/main.js"></script>
-    <!-- We might need specific product JS to handle translation if keys are dynamic or just main.js is enough -->
+    <script src="js/components.js"></script>
 </body>
 
 </html>
