--- a/register.html
+++ b/register.html
@@ -6,53 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Register | DERMOCÉAN</title>
 
+    <!-- Fonts & Icons -->
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&family=Almarai:wght@700&family=Tajawal:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-    <!-- Top Bar -->
-    <div class="top-bar">
-        <div class="container">
-            <div class="contact-info">
-                <i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com"
-                    style="color: inherit; text-decoration: none;">info@dermocéan.com</a>
-            </div>
-            <div class="lang-selector">
-                <a href="#" onclick="changeLanguage('en')" class="active" data-lang="en"><span>🇺🇸</span> EN</a>
-                <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
-                <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
-                <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
-            </div>
-        </div>
-    </div>
-
-    <!-- Header -->
-    <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN">
-            </a>
-
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
-
-            <ul class="nav-links">
-                <li><a href="index.html" data-i18n="home">Home</a></li>
-                <li><a href="about.html" data-i18n="aboutUs">About</a></li>
-                <li><a href="index.html#products" data-i18n="products">Products</a></li>
-                <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
-                <li><a href="articles.html" data-i18n="articles">Articles</a></li>
-                <li><a href="videos.html" data-i18n="videos">Videos</a></li>
-                <li><a href="register.html" class="btn btn-outline active" data-i18n="register">B2B Register</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Header Component -->
+    <div id="header-component"></div>
 
     <!-- Registration Section -->
     <section class="registration-section">
@@ -114,86 +79,12 @@
         </div>
     </div>
 
-    <!-- WhatsApp Widget -->
-    <a href="https://wa.me/905455336663" target="_blank" class="whatsapp-widget">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-col">
-                    <h4 data-i18n="aboutDermocean">About Dermocean</h4>
-                    <p style="color: #aaa; font-size: 0.9rem;" data-i18n="aboutText">
-                        Leading B2B skincare provider for beauty centers.
-                        Combining nature's finest ingredients with scientific innovation.
-                    </p>
-                </div>
-                <div class="footer-col">
-                    <h4 data-i18n="quickLinks">Quick Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="index.html" data-i18n="home">Home</a></li>
-                        <li><a href="about.html" data-i18n="aboutUs">About</a></li>
-                        <li><a href="how-to-use.html" data-i18n="howToUse">How to Use</a></li>
-                        <li><a href="videos.html" data-i18n="videos">Videos</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4 data-i18n="contactUs">Contact Us</h4>
-                    <ul class="footer-links">
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@dermocéan.com">info@dermocéan.com</a>
-                        </li>
-                        <li><i class="fas fa-phone"></i> +90 545 533 6663</li>
-                        <li><i class="fab fa-instagram"></i> @dermoceanofficial</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <p>&copy; 2025 DERMOCÉAN. All Rights Reserved.</p>
-                <div class="payment-methods" style="justify-content: center; margin-top: 1rem;">
-                    <div class="payment-method">
-                        <i class="fas fa-money-bill-wave icon"></i>
-                        <span data-i18n="cashOnDelivery">Cash on Delivery</span>
-                    </div>
-                    <div class="payment-method">
-                        <i class="fas fa-university icon"></i>
-                        <span data-i18n="bankTransfer">Bank Transfer</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- Mobile Menu Overlay -->
-    <div class="mobile-overlay"></div>
-
-    <!-- Mobile Sidebar -->
-    <div class="mobile-menu-sidebar">
-        <div class="mobile-menu-header">
-            <img src="images/logo/dermocean-logo.svg" alt="DERMOCÉAN" style="height: 40px;">
-            <button class="close-menu"><i class="fas fa-times"></i></button>
-        </div>
-        <div class="mobile-menu-items">
-            <a href="index.html" data-i18n="home">Home</a>
-            <a href="about.html" data-i18n="aboutUs">About</a>
-            <a href="index.html#products" data-i18n="products">Products</a>
-            <a href="how-to-use.html" data-i18n="howToUse">How to Use</a>
-            <a href="articles.html" data-i18n="articles">Articles</a>
-            <a href="videos.html" data-i18n="videos">Videos</a>
-            <a href="register.html" data-i18n="register">B2B Register</a>
-        </div>
-        <div class="mobile-lang-selector" style="margin-top: 2rem; justify-content: center; display: flex; gap: 1rem;">
-            <a href="#" onclick="changeLanguage('en')" data-lang="en"><span>🇺🇸</span> EN</a>
-            <a href="#" onclick="changeLanguage('fr')" data-lang="fr"><span>🇫🇷</span> FR</a>
-            <a href="#" onclick="changeLanguage('ar')" data-lang="ar"><span>🇸🇦</span> AR</a>
-            <a href="#" onclick="changeLanguage('tr')" data-lang="tr"><span>🇹🇷</span> TR</a>
-        </div>
-    </div>
+    <!-- Footer Component -->
+    <div id="footer-component"></div>
 
     <!-- Scripts -->
     <script src="js/main.js"></script>
+    <script src="js/components.js"></script>
 </body>
 
 </html>
